Implemented DRY principle for Account.create routes and API. Finished tests for both. Finished manual tests for creating new account. Added JS input validation to New Account title form, which ensures first char is not a digit. Added initialisation checks that throw errors if first char is a digit.
